samples/_failures_safe/1761642712_7b0074_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15cf0120.c: In function ‘main’:
./samples/SAFE/__tmp_15cf0120.c:147:23: error: expected ‘)’ at end of input
  147 |     print_matrix(&mat1
      |                 ~     ^
      |                       )
./samples/SAFE/__tmp_15cf0120.c:147:5: error: expected declaration or statement at end of input
  147 |     print_matrix(&mat1
      |     ^~~~~~~~~~~~
